# freeplay-sandbox-supervisor

./: CMakeLists.txt  README.md  package.xml  setup.py
nodes/: launch.py  launcher.py  supervisor
nodes/freeplay_sandbox_supervisor/: experiment.py  launcher.py
nodes/freeplay_sandbox_supervisor/tpl/: launcher.tpl  manage.tpl  records.tpl  status.tpl  supervisor.tpl
share/: nginx.conf
